fix tag editor align.

--- a/app/assets/stylesheets/tag_editor.scss
+++ b/app/assets/stylesheets/tag_editor.scss
@@ -49,6 +49,7 @@
         margin: 4px 4px 4px 0;
         display: inline-block;
         line-height: 16px;
+        vertical-align: middle;
       }
 
       &.delete {
